Fixed using Swagger